# insult

./: CMakeLists.txt  data.txt  insult.cpp  patterner.cpp  patterner.h
